@@ -2,15 +2,15 @@
 (*                                                                     *)
 (*                                OCaml                                *)
 (*                                                                     *)
-(*            Xavier Leroy, projet Cristal, INRIA Rocquencourt         *)
+(*          Damien Doligez, projet Gallium, INRIA Rocquencourt         *)
 (*                                                                     *)
-(*  Copyright 1998 Institut National de Recherche en Informatique et   *)
+(*  Copyright 2012 Institut National de Recherche en Informatique et   *)
 (*  en Automatique.  All rights reserved.  This file is distributed    *)
 (*  under the terms of the Q Public License version 1.0.               *)
 (*                                                                     *)
 (***********************************************************************)
 
-(* $Id$ *)
+(* $Id: ocamlcp.ml 11890 2011-12-20 10:35:43Z frisch $ *)
 
 open Printf
 
@@ -21,6 +21,9 @@ let toremove = ref ([] : string list)
 let option opt () = compargs := opt :: !compargs
 let option_with_arg opt arg =
   compargs := (Filename.quote arg) :: opt :: !compargs
+;;
+let option_with_int opt arg =
+  compargs := (string_of_int arg) :: opt :: !compargs
 ;;
 
 let make_archive = ref false;;
@@ -35,13 +38,13 @@ let process_file filename =
   compargs := (Filename.quote filename) :: !compargs
 ;;
 
-let usage = "Usage: ocamlcp <options> <files>\noptions are:"
+let usage = "Usage: ocamloptp <options> <files>\noptions are:"
 
 let incompatible o =
-  fprintf stderr "ocamlcp: profiling is incompatible with the %s option\n" o;
+  fprintf stderr "ocamloptp: profiling is incompatible with the %s option\n" o;
   exit 2
 
-module Options = Main_args.Make_bytecomp_options (struct
+module Options = Main_args.Make_optcomp_options (struct
   let _a () = make_archive := true; option "-a" ()
   let _absname = option "-absname"
   let _annot = option "-annot"
@@ -49,38 +52,37 @@ module Options = Main_args.Make_bytecomp_options (struct
   let _cc s = option_with_arg "-cc" s
   let _cclib s = option_with_arg "-cclib" s
   let _ccopt s = option_with_arg "-ccopt" s
+  let _compact = option "-compact"
   let _config = option "-config"
-  let _custom = option "-custom"
-  let _dllib = option_with_arg "-dllib"
-  let _dllpath = option_with_arg "-dllpath"
-  let _dtypes = option "-dtypes"
+  let _for_pack s = option_with_arg "-for-pack" s
   let _g = option "-g"
   let _i = option "-i"
   let _I s = option_with_arg "-I" s
   let _impl s = with_impl := true; option_with_arg "-impl" s
+  let _inline n = option_with_int "-inline" n
   let _intf s = with_intf := true; option_with_arg "-intf" s
   let _intf_suffix s = option_with_arg "-intf-suffix" s
   let _labels = option "-labels"
   let _linkall = option "-linkall"
-  let _make_runtime = option "-make-runtime"
   let _no_app_funct = option "-no-app-funct"
   let _noassert = option "-noassert"
-  let _nolabels = option "-nolabels"
   let _noautolink = option "-noautolink"
+  let _nodynlink = option "-nodynlink"
+  let _nolabels = option "-nolabels"
   let _nostdlib = option "-nostdlib"
   let _o s = option_with_arg "-o" s
   let _output_obj = option "-output-obj"
+  let _p = option "-p"
   let _pack = option "-pack"
   let _pp s = incompatible "-pp"
   let _principal = option "-principal"
   let _rectypes = option "-rectypes"
   let _runtime_variant s = option_with_arg "-runtime-variant" s
+  let _S = option "-S"
   let _strict_sequence = option "-strict-sequence"
-  let _thread () = option "-thread" ()
-  let _vmthread () = option "-vmthread" ()
+  let _shared = option "-shared"
+  let _thread = option "-thread"
   let _unsafe = option "-unsafe"
-  let _use_prims s = option_with_arg "-use-prims" s
-  let _use_runtime s = option_with_arg "-use-runtime" s
   let _v = option "-v"
   let _version = option "-version"
   let _vnum = option "-vnum"
@@ -89,11 +91,26 @@ module Options = Main_args.Make_bytecomp_options (struct
   let _warn_error = option_with_arg "-warn-error"
   let _warn_help = option "-warn-help"
   let _where = option "-where"
+
   let _nopervasives = option "-nopervasives"
   let _dparsetree = option "-dparsetree"
   let _drawlambda = option "-drawlambda"
   let _dlambda = option "-dlambda"
-  let _dinstr = option "-dinstr"
+  let _dclambda = option "-dclambda"
+  let _dcmm = option "-dcmm"
+  let _dsel = option "-dsel"
+  let _dcombine = option "-dcombine"
+  let _dlive = option "-dlive"
+  let _dspill = option "-dspill"
+  let _dsplit = option "-dsplit"
+  let _dinterf = option "-dinterf"
+  let _dprefer = option "-dprefer"
+  let _dalloc = option "-dalloc"
+  let _dreload = option "-dreload"
+  let _dscheduling = option "-dscheduling"
+  let _dlinear = option "-dlinear"
+  let _dstartup = option "-dstartup"
+
   let anonymous = process_file
 end);;
 
@@ -110,20 +127,19 @@ let optlist =
         \032     l  while and for loops\n\
         \032     m  match ... with\n\
         \032     t  try ... with")
-    :: ("-p", Arg.String add_profarg, "[afilmt]  Same as option -P")
     :: Options.list
 in
 Arg.parse optlist process_file usage;
 if !with_impl && !with_intf then begin
-  fprintf stderr "ocamlcp cannot deal with both \"-impl\" and \"-intf\"\n";
+  fprintf stderr "ocamloptp cannot deal with both \"-impl\" and \"-intf\"\n";
   fprintf stderr "please compile interfaces and implementations separately\n";
   exit 2;
 end else if !with_impl && !with_mli then begin
-  fprintf stderr "ocamlcp cannot deal with both \"-impl\" and .mli files\n";
+  fprintf stderr "ocamloptp cannot deal with both \"-impl\" and .mli files\n";
   fprintf stderr "please compile interfaces and implementations separately\n";
   exit 2;
 end else if !with_intf && !with_ml then begin
-  fprintf stderr "ocamlcp cannot deal with both \"-intf\" and .ml files\n";
+  fprintf stderr "ocamloptp cannot deal with both \"-intf\" and .ml files\n";
   fprintf stderr "please compile interfaces and implementations separately\n";
   exit 2;
 end;
@@ -131,9 +147,9 @@ if !with_impl then profargs := "-impl" :: !profargs;
 if !with_intf then profargs := "-intf" :: !profargs;
 let status =
   Sys.command
-    (Printf.sprintf "ocamlc -pp \"ocamlprof -instrument %s\" %s %s"
+    (Printf.sprintf "ocamlopt -pp \"ocamlprof -instrument %s\" %s %s"
         (String.concat " " (List.rev !profargs))
-        (if !make_archive then "" else "profiling.cmo")
+        (if !make_archive then "" else "profiling.cmx")
         (String.concat " " (List.rev !compargs)))
 in
 exit status
