@@ -36,6 +36,7 @@ Native-code compiler:
   number debugging annotations, enabling in particular precise stack
   backtraces with the gdb debugger. Currently supported for x86 32-bits
   and 64-bits only. (PR#5487)
+- New tool: ocamloptp, the equivalent of ocamlcp for the native-code compiler.
 
 Standard library:
 - Added float functions "hypot" and "copysign" (PR#3806, PR#4752, PR#5246)
